tdf#166338 vcl: avoid unwanted downscale in DrawTransformedBitmapEx()

Open the Impress bugdoc, the "Annotated result:" image's "red cable"
bitmap is sharp in edit mode, but is blurry when presenting.

This went wrong in commit 7c94d7267bc8b5f43185204ab4953c4b188214bf
(tdf#149943 vcl: fix pixelated PDF export and print for a rotated image,
2022-08-03), which stopped changing the scale part of the transform
matrix. The old problem was that the transform resulted in a downscale:
debug:5739:5739: OutputDevice::DrawTransformedBitmapEx: aOriginalScale w,h is 226,100, aFullScale is (906.698,6277.69) -> for w, we go from 906 to 226

The new use-case is that this transform used to upscale in the past,
which preserved more pixels from the original bitmap:
debug:5632:5632: OutputDevice::DrawTransformedBitmapEx: aOriginalScale w,h is 326,1125, aFullScale is (21.1276,76.1197) -> for w, we go from 21 to 326
Fix the problem by conditionally restore the change of the scale in the
transform matrix: only do it when we would upscale. This was the
presented bitmap is sharp again, but the old use-case continues to work.

The deeper problem is why slideshow goes via a metafile at all, but
that's not changed here.

Change-Id: I73ef426dc9d047a0231a700b0fe7ed0e4747d81b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191497
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>